fixing integration tests